
## Fixes
- `warn-stranded`: Automatically ignore citizens who are gathering plants or digging to avoid issues with gathering fruit via stepladders and weird issues with digging
- `warn-stranded`: Update onZoom to use df's centering functionality
- `ban-cooking`: fix banning creature alcohols resulting in error

## Misc Improvements
- `gui/control-panel`: reduce frequency for `warn-stranded` check to once every 2 days
- `gui/control-panel`: tools are now organized by type: automation, bugfix, and gameplay
- `confirm`: updated confirmation dialogs to use clickable widgets and draggable windows
- `confirm`: added confirmation dialog for right clicking out of the trade agreement screen (so your trade agreement selections aren't lost)

## Removed

# 50.11-r4

## New Tools
- `build-now`: (reinstated) instantly complete unsuspended buildings that are ready to be built

## Fixes
- `combine`: prevent stack sizes from growing beyond quantities that you would normally see in vanilla gameplay

## Misc Improvements
- `caravan`: enable searching within containers in trade screen when in "trade bin with contents" mode

# 50.11-r3

## New Tools
- `sync-windmills`: synchronize or randomize movement of active windmills
- `trackstop`: (reimplemented) integrated overlay for changing track stop and roller settings after construction

## New Features
- `gui/design`: show selected dimensions next to the mouse cursor when designating with vanilla tools, for example when painting a burrow or designating digging
- `quickfort`: new ``burrow`` blueprint mode for designating or manipulating burrows
- `unforbid`: now ignores worn and tattered items by default (X/XX), use -X to bypass
- `fix/dead-units`: gained ability to scrub dead units from burrow membership lists

## Fixes
- `gui/unit-syndromes`: show the syndrome names properly in the UI
- `emigration`: fix clearing of work details assigned to units that leave the fort

## Misc Improvements